radv: Support fullyCoveredFragmentShaderInputVariable from VK_EXT_conservative_rasterization on RDNA2+
To support D3D12 FL 12.2, this feature is required.
There is CTS coverage in dEQP-VK.*.conservative*
. Getting a bunch of "not supported" with
NotSupported (primitiveUnderestimation not supported at vktFragmentShadingRateBasic.cpp:359)
These are somewhat tightly linked. Underestimation is only supported indirectly in FL 12.2 by having shader discard based on the SV_InnerCoverage, which maps directly to FullyCoveredEXT builtin more or less.
Based on testing this against AMD native d3d12 driver, it seems to be enough to read v2 to get the inner coverage.